trois-tiers/db/pg.network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-db
spec:
  podSelector:
    matchLabels:
      app: pg
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: tiers-api
    ports:
    - protocol: TCP
      port: 5432
